# ascendc-skill

./: README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/ge_glu_grad_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/ge_glu_grad_v2/docs/: aclnnGeGluGradV2.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/ge_glu_grad_v2/op_host/: ge_glu_grad_v2.cpp  ge_glu_grad_v2_def.cpp  ge_glu_grad_v2_tiling.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/ge_glu_grad_v2/op_kernel/: ge_glu_grad_v2_base_310p.h  ge_glu_grad_v2_erf_base.h  ge_glu_grad_v2_fp16_310p.h  ge_glu_grad_v2_tanh_base.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/swi_glu/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/swi_glu/docs/: aclnnSwiGlu.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/swi_glu/op_host/: swi_glu.cpp  swi_glu_def.cpp  swi_glu_tiling.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/activation/swi_glu/op_kernel/: glu_tiling.hpp  glu_tiling_kernel.hpp  swi_glu.cpp  swi_glu_bf16.hpp  swi_glu_impl.hpp  swi_glu_single.hpp
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v2/op_host/: conv2_d_backprop_filter_v2_def.cpp  conv2_d_backprop_filter_v2_tiling.cpp  conv2d_backprop_filter_v2_tiling.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v2/op_kernel/: conv2d_backprop_filter_v2.cpp  conv2d_backprop_filter_v2.h  conv2d_bp_filter.h  conv2d_bp_filter_config.h  conv2d_bp_filter_impl.h  conv2d_bp_filter_intf.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v3/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v3/op_host/: conv2_d_backprop_filter_v3_def.cpp  conv2_d_backprop_filter_v3_tiling.cpp  conv2d_backprop_filter_v3_tiling.h  conv2dbp_adapt_to_conv3dbp.cpp  conv2dbp_adapt_to_conv3dbp.h  conv3d_backprop_filter_v2_tiling.h  conv3d_backprop_input.h  conv3d_backprop_input_v2_tiling.h  conv3d_dw_v2_basic_block_tiling.h
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_filter_v3/op_kernel/: conv2d_backprop_filter_v3.cpp  conv3d_backprop_filter_v2.h  conv3d_bp_filter.h  (+2 more)
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_backprop_input_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv2d_transpose_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv3d_backprop_filter_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv3d_transpose_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conv/conv3dv2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/circular_pad/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/circular_pad_grad/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/coalesce_sparse/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/diag_flat/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/pad_v3_grad_replicate/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/pad_v3_grad_replication/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/pad_v4_grad/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/reflection_pad3d_grad/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/reverse_sequence/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/conversion/strided_slice_assign_v2/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/foreach/foreach_add_scalar/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/foreach/foreach_addcmul_list/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/foreach/foreach_erfc/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/foreach/foreach_non_finite_check_and_unscale/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/foreach/foreach_zero_inplace/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/grid_sample/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/grid_sampler2d_grad/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/motion_compensation/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/multi_scale_deformable_attn_function/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/resize_upsample_trilinear/: CMakeLists.txt  README.md
skills/ascend-kernel-generator/reference/ref_repositories/cann-ops/src/image/upsample_bicubic2d/: CMakeLists.txt  README.md
(+9720 files in other folders)
